--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a-scene embedded arjs>
         <a-assets>
             <img id="my-image" src="img/Agil.jpeg">
-            <a-asset-item id="cityModel" src="assets/model/ferrari_f50_1995.glb"></a-asset-item>
+            <a-asset-item id="cityModel" src="img/ferrari_f50_1995.glb"></a-asset-item>
         </a-assets>
         <a-marker preset="custom" type="pattern" url="pattern/pattern-ASIA.patt">
            
